{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 14,
  "lineage": "ed654c6c-e700-fcc4-1b85-1b7270d4f0b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "srikanth_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:internet-gateway/igw-0f7a4df8edee678f8",
            "id": "igw-0f7a4df8edee678f8",
            "owner_id": "076796054144",
            "tags": {
              "Name": "srikanth_internet_gateway"
            },
            "tags_all": {
              "Name": "srikanth_internet_gateway"
            },
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "srikanth_pub_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:network-acl/acl-03f1ea85cae60c51d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-03f1ea85cae60c51d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "076796054144",
            "subnet_ids": [
              "subnet-0442d1dfef4a0a566"
            ],
            "tags": {
              "Name": "srikanth_public_nacl"
            },
            "tags_all": {
              "Name": "srikanth_public_nacl"
            },
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.srikanth_pub_sn",
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "srikanth_pvt_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:network-acl/acl-0202d75a3b5300891",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0202d75a3b5300891",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "076796054144",
            "subnet_ids": [
              "subnet-0fa40d0cb0dc1d2bf"
            ],
            "tags": {
              "Name": "srikanth_pvt_nacl"
            },
            "tags_all": {
              "Name": "srikanth_pvt_nacl"
            },
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.srikanth_pvt_sn",
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "srikanth_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:route-table/rtb-0614d43a8fe5fcb1f",
            "id": "rtb-0614d43a8fe5fcb1f",
            "owner_id": "076796054144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7a4df8edee678f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "srikanth_public_route_table"
            },
            "tags_all": {
              "Name": "srikanth_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.srikanth_igw",
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "srikanth_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:route-table/rtb-0e624243edef6f22d",
            "id": "rtb-0e624243edef6f22d",
            "owner_id": "076796054144",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "srikanth_private_route_table"
            },
            "tags_all": {
              "Name": "srikanth_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "srikanth_pub_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1b23165c960b2e",
            "route_table_id": "rtb-0614d43a8fe5fcb1f",
            "subnet_id": "subnet-0442d1dfef4a0a566"
          },
          "dependencies": [
            "aws_internet_gateway.srikanth_igw",
            "aws_route_table.srikanth_pub_rt",
            "aws_subnet.srikanth_pub_sn",
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "srikanth_pvt_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf314b097db91e9",
            "route_table_id": "rtb-0e624243edef6f22d",
            "subnet_id": "subnet-0fa40d0cb0dc1d2bf"
          },
          "dependencies": [
            "aws_route_table.srikanth_pvt_rt",
            "aws_subnet.srikanth_pvt_sn",
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "srikanth_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:security-group/sg-0fd4c660feef66737",
            "description": "ALLOW SSH \u0026 HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd4c660feef66737",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from www",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from www",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "srikanth-web",
            "name_prefix": "",
            "owner_id": "076796054144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "srikanth_pub_firewall"
            },
            "tags_all": {
              "Name": "srikanth_pub_firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "srikanth_pvt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:security-group/sg-0fcfd8337c59f9f87",
            "description": "ALLOW SSH \u0026 MYSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcfd8337c59f9f87",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MYSQL from vpc",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "srikanth-db",
            "name_prefix": "",
            "owner_id": "076796054144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "srikanth_db_firewall"
            },
            "tags_all": {
              "Name": "srikanth_db_firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "srikanth_pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:subnet/subnet-0442d1dfef4a0a566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0442d1dfef4a0a566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076796054144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "srikanth_public_subnet"
            },
            "tags_all": {
              "Name": "srikanth_public_subnet"
            },
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "srikanth_pvt_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:subnet/subnet-0fa40d0cb0dc1d2bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa40d0cb0dc1d2bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076796054144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "srikanth_private_subnet"
            },
            "tags_all": {
              "Name": "srikanth_private_subnet"
            },
            "vpc_id": "vpc-017f49d34e2bb2705"
          },
          "dependencies": [
            "aws_vpc.srikanth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "srikanth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:076796054144:vpc/vpc-017f49d34e2bb2705",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-040e3298f55416257",
            "default_route_table_id": "rtb-0beb5f29268300eea",
            "default_security_group_id": "sg-022b84dcc806bd518",
            "dhcp_options_id": "dopt-03f0df3c4baa00571",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017f49d34e2bb2705",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0beb5f29268300eea",
            "owner_id": "076796054144",
            "tags": {
              "Name": "ksk_vpc"
            },
            "tags_all": {
              "Name": "ksk_vpc"
            }
          }
        }
      ]
    }
  ]
}